feat: :sparkles: add initial html code
add initial html code that include div, h1, input, button, script, link tag

#1

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="exterior">
+        <div>
+            <h1 style="text-align: center;" id="question">example</h1>
+            <div>
+                <input type="text" id="answer"></input>
+                <button>Click this button</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
