feat: :sparkles: add style.css
add css style that changes width of exterior and aligns text

#2

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <div id="exterior">
         <div>
-            <h1 style="text-align: center;" id="question">example</h1>
-            <div>
+            <h1 id="question">example</h1>
+            <p id="score">Score:</p>
+        </div>
+        <div id="answerBox">
                 <input type="text" id="answer"></input>
                 <button>Click this button</button>
-            </div>
         </div>
     </div>
     <script src="script.js"></script>
