feat: :sparkles: add questionLists and arrayChecker
add function arrayChecker and questionLists to check array length and compare both to see if both are equal length

#4

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div id="exterior">
         <div>
-            <h1 id="question">example</h1>
-            <p id="score">Score:</p>
+            <h1 id="question">example 1:</h1>
+            <p id="score">score</p>
         </div>
         <div id="answerBox">
                 <input type="text" id="answer"></input>
-                <button>Click this button</button>
+                <button id="submit">Click this button</button>
         </div>
     </div>
     <script src="script.js"></script>
