--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="exterior">
-        <div>
-            <h1 id="question">example 1:</h1>
-            <p id="score">score</p>
-        </div>
-        <div id="answerBox">
-                <input type="text" id="answer"></input>
-                <button id="submit">Click this button</button>
-        </div>
-    </div>
+    <div id="quiz"></div>
+    <button id="submit">Submit</button>
+    <div id="results"></div>
     <script src="script.js"></script>
 </body>
 </html>
