--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="quiz"></div>
-    <button id="submit">Submit</button>
-    <div id="results"></div>
-    <script src="script.js"></script>
+    <div class="panel">
+        <h1>Quiz Application Using JavaScript</h1>
+        <div class="question" id="ques"></div>
+        <div class="options" id="opt"></div>
+        <button onclick="checkAns()" id="btn">SUBMIT</button>
+        <div id="score"></div>
+        <script src="script.js"></script>
+    </div>
 </body>
 </html>
