--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="panel">
-        <h1>Quiz Application Using JavaScript</h1>
+        <h1>Film Quiz</h1>
         <div class="question" id="ques"></div>
         <div class="options" id="opt"></div>
         <button onclick="checkAns()" id="btn">SUBMIT</button>
