fix: :sparkles: add loadScore function
add loadScore function to show your score after the final question.

#6

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="panel">
-        <h1>Film Quiz</h1>
+        <h1 id="title">Film Quiz</h1>
         <div class="question" id="ques"></div>
         <div class="options" id="opt"></div>
-        <button onclick="checkAns()" id="btn">SUBMIT</button>
+        <button onclick="checkAns()" class="btn" id="btn">SUBMIT</button>
         <div id="score"></div>
         <script src="script.js"></script>
     </div>
