feat: :sparkles: add restart button
add restart button to restart game after finish

#11

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="options" id="opt"></div>
         <button onclick="checkAns()" class="btn" id="btn">SUBMIT</button>
         <div id="score"></div>
+        <button onclick="location.reload()" class="btn" id="restartBtn">Restart</button>
         <script src="script.js"></script>
     </div>
 </body>
